--- a/GameLauncherAdmin/Views/MainPage.xaml
+++ b/GameLauncherAdmin/Views/MainPage.xaml
@@ -4,9 +4,177 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:winuicontrols="using:CommunityToolkit.WinUI.Controls"
+    xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
+    xmlns:models="using:GameLauncher.ObservableObjet"
     mc:Ignorable="d">
+    <Page.Resources>
+        <DataTemplate x:Key="ItemTemplate" x:DataType="models:ObservableItem">
+            <Grid
+        x:Name="itemThumbnail"
+        Padding="{StaticResource XSmallLeftTopRightBottomMargin}">
+                <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <winuicontrols:ConstrainedBox AspectRatio="2:3">
+                        <Image Source="{Binding Cover,Mode=OneWay}" Stretch="Fill"/>
+                    </winuicontrols:ConstrainedBox>
+                    <TextBlock Height="60"
+                Margin="{StaticResource XXSmallTopMargin}"
+                HorizontalAlignment="Center"
+                Style="{ThemeResource BodyTextStyle}"
+                Text="{x:Bind Name}" />
+                </StackPanel>
+            </Grid>
+        </DataTemplate>
+        <DataTemplate x:Key="CollectionTemplate">
+            <winuicontrols:ConstrainedBox AspectRatio="1920:1080">
+                <Grid Margin="0" Padding="0">
+                    <Grid.Background>
+                        <ImageBrush Stretch="Fill" ImageSource="{Binding Fanart,Mode=OneWay}" x:Name="bckBrush"></ImageBrush>
+                    </Grid.Background>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Border Grid.Row="0" Margin="0" Padding="0">
+                        <Rectangle Fill="{ThemeResource AcrylicBackgroundFillColorDefaultBrush}" Opacity="0.8" />
+                    </Border>
+                    <StackPanel Orientation="Vertical" Margin="0" Padding="0">
+                        <winuicontrols:ConstrainedBox AspectRatio="1:1"  Height="250" Margin="0" Padding="0">
+                            <Image Source="{Binding Logo,Mode=OneWay}" Stretch="Uniform" Margin="0"/>
+                        </winuicontrols:ConstrainedBox>
+                        <TextBlock Style="{StaticResource HeaderTextBlockStyle}" HorizontalAlignment="Center" HorizontalTextAlignment="Center" Text="{Binding Name}"></TextBlock>
+                    </StackPanel>
+                </Grid>
+            </winuicontrols:ConstrainedBox>
+        </DataTemplate>
+    </Page.Resources>
 
     <Grid x:Name="ContentArea">
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Button Grid.Row="0" Command="{x:Bind ViewModel.RefreshCommand}" HorizontalAlignment="Right">
+            <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE72C;"/>
+        </Button>
+        <ScrollViewer VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Visible" Grid.Row="1">
+            <StackPanel Orientation="Vertical">
+                <TextBlock Style="{StaticResource SubheaderTextBlockStyle}" FontSize="20" Margin="5,0" Text="Items sans descriptions :"/>
+                <controls:AdaptiveGridView  ItemsSource="{x:Bind ViewModel.ItemsWithoutDescription,Mode=OneWay}"
+                                            ScrollViewer.HorizontalScrollMode="Enabled"
+                                            ScrollViewer.HorizontalScrollBarVisibility="Visible"                                            
+                                            ItemHeight="360" DesiredWidth="200"
+                                            ItemTemplate="{StaticResource ItemTemplate}"
+                                            IsItemClickEnabled="True"
+                                            ItemClickCommand="{x:Bind ViewModel.ItemClickCommand}"
+                                            StretchContentForSingleRow="False"
+                                            OneRowModeEnabled="True"></controls:AdaptiveGridView>
+                <TextBlock Style="{StaticResource SubheaderTextBlockStyle}" FontSize="20" Margin="5,0" Text="Items sans date de sortie :"/>
+                <controls:AdaptiveGridView  ItemsSource="{x:Bind ViewModel.ItemsWithoutReleaseDate,Mode=OneWay}"
+                                            ScrollViewer.HorizontalScrollMode="Enabled"
+                                            ScrollViewer.HorizontalScrollBarVisibility="Visible"                                            
+                                            ItemHeight="360" DesiredWidth="200"
+                                            ItemTemplate="{StaticResource ItemTemplate}"
+                                            IsItemClickEnabled="True"
+                                            ItemClickCommand="{x:Bind ViewModel.ItemClickCommand}"
+                                            StretchContentForSingleRow="False"
+                                            OneRowModeEnabled="True"></controls:AdaptiveGridView>
+                <TextBlock Style="{StaticResource SubheaderTextBlockStyle}" FontSize="20" Margin="5,0" Text="Items sans genres :"/>
+                <controls:AdaptiveGridView  ItemsSource="{x:Bind ViewModel.ItemsWithoutGenres,Mode=OneWay}"
+                                            ScrollViewer.HorizontalScrollMode="Enabled"
+                                            ScrollViewer.HorizontalScrollBarVisibility="Visible"                                            
+                                            ItemHeight="360" DesiredWidth="200"
+                                            ItemTemplate="{StaticResource ItemTemplate}"
+                                            IsItemClickEnabled="True"
+                                            ItemClickCommand="{x:Bind ViewModel.ItemClickCommand}"
+                                            StretchContentForSingleRow="False"
+                                            OneRowModeEnabled="True"></controls:AdaptiveGridView>
+                <TextBlock Style="{StaticResource SubheaderTextBlockStyle}" FontSize="20" Margin="5,0" Text="Items sans Studio :"/>
+                <controls:AdaptiveGridView  ItemsSource="{x:Bind ViewModel.ItemsWithoutDevelloppeurs,Mode=OneWay}"
+                                            ScrollViewer.HorizontalScrollMode="Enabled"
+                                            ScrollViewer.HorizontalScrollBarVisibility="Visible"                                            
+                                            ItemHeight="360" DesiredWidth="200"
+                                            ItemTemplate="{StaticResource ItemTemplate}"
+                                            IsItemClickEnabled="True"
+                                            ItemClickCommand="{x:Bind ViewModel.ItemClickCommand}"
+                                            StretchContentForSingleRow="False"
+                                            OneRowModeEnabled="True"></controls:AdaptiveGridView>
+                <TextBlock Style="{StaticResource SubheaderTextBlockStyle}" FontSize="20" Margin="5,0" Text="Items sans Editeurs :"/>
+                <controls:AdaptiveGridView  ItemsSource="{x:Bind ViewModel.ItemsWithoutEditeurs,Mode=OneWay}"
+                                            ScrollViewer.HorizontalScrollMode="Enabled"
+                                            ScrollViewer.HorizontalScrollBarVisibility="Visible"                                            
+                                            ItemHeight="360" DesiredWidth="200"
+                                            ItemTemplate="{StaticResource ItemTemplate}"
+                                            IsItemClickEnabled="True"
+                                            ItemClickCommand="{x:Bind ViewModel.ItemClickCommand}"
+                                            StretchContentForSingleRow="False"
+                                            OneRowModeEnabled="True"></controls:AdaptiveGridView>
+                <TextBlock Style="{StaticResource SubheaderTextBlockStyle}" FontSize="20" Margin="5,0" Text="Items sans Cover :"/>
+                <controls:AdaptiveGridView  ItemsSource="{x:Bind ViewModel.ItemsWithoutCover,Mode=OneWay}"
+                                            ScrollViewer.HorizontalScrollMode="Enabled"
+                                            ScrollViewer.HorizontalScrollBarVisibility="Visible"                                            
+                                            ItemHeight="360" DesiredWidth="200"
+                                            ItemTemplate="{StaticResource ItemTemplate}"
+                                            IsItemClickEnabled="True"
+                                            ItemClickCommand="{x:Bind ViewModel.ItemClickCommand}"
+                                            StretchContentForSingleRow="False"
+                                            OneRowModeEnabled="True"></controls:AdaptiveGridView>
+                <TextBlock Style="{StaticResource SubheaderTextBlockStyle}" FontSize="20" Margin="5,0" Text="Items sans Logo :"/>
+                <controls:AdaptiveGridView  ItemsSource="{x:Bind ViewModel.ItemsWithoutLogo,Mode=OneWay}"
+                                            ScrollViewer.HorizontalScrollMode="Enabled"
+                                            ScrollViewer.HorizontalScrollBarVisibility="Visible"                                            
+                                            ItemHeight="360" DesiredWidth="200"
+                                            ItemTemplate="{StaticResource ItemTemplate}"
+                                            IsItemClickEnabled="True"
+                                            ItemClickCommand="{x:Bind ViewModel.ItemClickCommand}"
+                                            StretchContentForSingleRow="False"
+                                            OneRowModeEnabled="True"></controls:AdaptiveGridView>
+                <TextBlock Style="{StaticResource SubheaderTextBlockStyle}" FontSize="20" Margin="5,0" Text="Items sans Artwork :"/>
+                <controls:AdaptiveGridView  ItemsSource="{x:Bind ViewModel.ItemsWithoutArtwork,Mode=OneWay}"
+                                            ScrollViewer.HorizontalScrollMode="Enabled"
+                                            ScrollViewer.HorizontalScrollBarVisibility="Visible"                                            
+                                            ItemHeight="360" DesiredWidth="200"
+                                            ItemTemplate="{StaticResource ItemTemplate}"
+                                            IsItemClickEnabled="True"
+                                            ItemClickCommand="{x:Bind ViewModel.ItemClickCommand}"
+                                            StretchContentForSingleRow="False"
+                                            OneRowModeEnabled="True"></controls:AdaptiveGridView>
+                <TextBlock Style="{StaticResource SubheaderTextBlockStyle}" FontSize="20" Margin="5,0" Text="Items sans Banner :"/>
+                <controls:AdaptiveGridView  ItemsSource="{x:Bind ViewModel.ItemsWithoutBanner,Mode=OneWay}"
+                                            ScrollViewer.HorizontalScrollMode="Enabled"
+                                            ScrollViewer.HorizontalScrollBarVisibility="Visible"                                            
+                                            ItemHeight="360" DesiredWidth="200"
+                                            ItemTemplate="{StaticResource ItemTemplate}"
+                                            IsItemClickEnabled="True"
+                                            ItemClickCommand="{x:Bind ViewModel.ItemClickCommand}"
+                                            StretchContentForSingleRow="False"
+                                            OneRowModeEnabled="True"></controls:AdaptiveGridView>
+                <TextBlock Style="{StaticResource SubheaderTextBlockStyle}" FontSize="20" Margin="5,0" Text="Items sans Video :"/>
+                <controls:AdaptiveGridView  ItemsSource="{x:Bind ViewModel.ItemsWithoutVideo,Mode=OneWay}"
+                                            ScrollViewer.HorizontalScrollMode="Enabled"
+                                            ScrollViewer.HorizontalScrollBarVisibility="Visible"                                            
+                                            ItemHeight="360" DesiredWidth="200"
+                                            ItemTemplate="{StaticResource ItemTemplate}"
+                                            IsItemClickEnabled="True"
+                                            ItemClickCommand="{x:Bind ViewModel.ItemClickCommand}"
+                                            StretchContentForSingleRow="False"
+                                            OneRowModeEnabled="True"></controls:AdaptiveGridView>
+                <TextBlock Style="{StaticResource SubheaderTextBlockStyle}" FontSize="20" Margin="5,0" Text="Collections sans Logo :"/>
+                <controls:AdaptiveGridView  ItemsSource="{x:Bind ViewModel.CollectionsWithoutLogo,Mode=OneWay}"
+                                            ScrollViewer.HorizontalScrollMode="Enabled"
+                                            ScrollViewer.HorizontalScrollBarVisibility="Visible"                                            
+                                            ItemHeight="360" DesiredWidth="600"
+                                            ItemTemplate="{StaticResource CollectionTemplate}"
+                                            StretchContentForSingleRow="False"
+                                            OneRowModeEnabled="True"></controls:AdaptiveGridView>
+                <TextBlock Style="{StaticResource SubheaderTextBlockStyle}" FontSize="20" Margin="5,0" Text="Collections sans Fanart :"/>
+                <controls:AdaptiveGridView  ItemsSource="{x:Bind ViewModel.CollectionsWithoutArtwork,Mode=OneWay}"
+                                            ScrollViewer.HorizontalScrollMode="Enabled"
+                                            ScrollViewer.HorizontalScrollBarVisibility="Visible"                                            
+                                            ItemHeight="360" DesiredWidth="600"
+                                            ItemTemplate="{StaticResource CollectionTemplate}"
+                                            StretchContentForSingleRow="False"
+                                            OneRowModeEnabled="True"></controls:AdaptiveGridView>
+            </StackPanel>
+        </ScrollViewer>
     </Grid>
 </Page>
