--- a/GameLauncherAdmin/Views/BibliothequeDetailPage.xaml
+++ b/GameLauncherAdmin/Views/BibliothequeDetailPage.xaml
@@ -4,7 +4,6 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
     xmlns:winuicontrols="using:CommunityToolkit.WinUI.Controls"
     xmlns:models="using:GameLauncherAdmin.Core.Models"
     xmlns:helper="using:GameLauncherAdmin.Helpers"
@@ -533,7 +532,7 @@
                                         <ListView.ItemTemplate>
                                             <DataTemplate>
                                                 <winuicontrols:ConstrainedBox AspectRatio="1:1" HorizontalAlignment="Left" Height="200" Margin="10">
-                                                        <controls:ImageEx Source="{Binding}" Stretch="Uniform" IsCacheEnabled="True" EnableLazyLoading="True"/>
+                                                        <Image Source="{Binding}" Stretch="Uniform"/>
                                                 </winuicontrols:ConstrainedBox>
                                             </DataTemplate>
                                         </ListView.ItemTemplate>
@@ -553,7 +552,7 @@
                                         <ListView.ItemTemplate>
                                             <DataTemplate>
                                                     <winuicontrols:ConstrainedBox AspectRatio="2:3" HorizontalAlignment="Left" Height="200" Margin="10">
-                                                        <controls:ImageEx Source="{Binding}" Stretch="Uniform" IsCacheEnabled="True" EnableLazyLoading="True"/>
+                                                        <Image Source="{Binding}" Stretch="Uniform"/>
                                                     </winuicontrols:ConstrainedBox>
                                             </DataTemplate>
                                         </ListView.ItemTemplate>
@@ -573,7 +572,7 @@
                                         <ListView.ItemTemplate>
                                             <DataTemplate>
                                                     <winuicontrols:ConstrainedBox AspectRatio="1920:1080" HorizontalAlignment="Left" Height="200" Margin="10">
-                                                        <controls:ImageEx Source="{Binding}" Stretch="Uniform" IsCacheEnabled="True" EnableLazyLoading="True"/>
+                                                        <Image Source="{Binding}" Stretch="Uniform"/>
                                                     </winuicontrols:ConstrainedBox>
                                             </DataTemplate>
                                         </ListView.ItemTemplate>
@@ -593,7 +592,7 @@
                                         <ListView.ItemTemplate>
                                             <DataTemplate>
                                                     <winuicontrols:ConstrainedBox AspectRatio="1920:620" HorizontalAlignment="Left" Height="200" Margin="10">
-                                                        <controls:ImageEx Source="{Binding}" Stretch="Uniform" IsCacheEnabled="True" EnableLazyLoading="True"/>
+                                                        <Image Source="{Binding}" Stretch="Uniform"/>
                                                     </winuicontrols:ConstrainedBox>
                                             </DataTemplate>
                                         </ListView.ItemTemplate>
