--- a/GameLauncherAdmin/Views/PreviewPage.xaml
+++ b/GameLauncherAdmin/Views/PreviewPage.xaml
@@ -5,7 +5,6 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:winuicontrols="using:CommunityToolkit.WinUI.Controls"
-    xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
     xmlns:helper="using:GameLauncherAdmin.Helpers"
     mc:Ignorable="d">
     <Page.Resources>
@@ -70,9 +69,9 @@
                 </ListView.ItemsPanel>
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <controls:ConstrainedBox AspectRatio="5:2" Margin="5">
+                        <winuicontrols:ConstrainedBox AspectRatio="5:2" Margin="5">
                             <Image Source="{Binding Collection.Logo,Mode=OneWay}" Stretch="Uniform"/>
-                        </controls:ConstrainedBox>
+                        </winuicontrols:ConstrainedBox>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
@@ -94,9 +93,9 @@
                 </ListView.ItemsPanel>
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <controls:ConstrainedBox AspectRatio="2:3" CornerRadius="25" Margin="5">
+                        <winuicontrols:ConstrainedBox AspectRatio="2:3" CornerRadius="25" Margin="5">
                             <Image Source="{Binding Item.Cover,Mode=OneWay}" Stretch="UniformToFill"/>
-                        </controls:ConstrainedBox>
+                        </winuicontrols:ConstrainedBox>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
